--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670905'>Target frame safety check should be in Event scope</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/667296'>Create one gpu:gles2::TraceOutputter per thread</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/669391'>Remove default value for title parameter</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/671324'>Fix marquee-element.html</a></td><td>Rob Buis</td></tr>
