--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/672243'>Avoid the usage of String::Format for non-ASCII UTF-8 characters.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670225'>PaymentHandler: Should pass 'type' and 'sizes' from renderer to browser.</a></td><td>Jinho Bang</td></tr>
 <tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/669459'>Make createHTMLDocument return a Document</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/667865'>Fix callsites of CSSParser::ParseSingleValue</a></td><td>Rob Buis</td></tr>
