--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/674405'>fixup! Fix some range value defaults</a></td><td>DongJun Kim</td></tr>
 <tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/671745'>Remove default value for HTMLAudioElement constructor</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/667928'>Changed width and height to unsigned long for HTMLMarqueeElement</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/672243'>Avoid the usage of String::Format for non-ASCII UTF-8 characters.</a></td><td>Shanmuga Pandi M</td></tr>
