--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/664898'>[RLS] LocalFrameView::ContentsSize shouldn't reflect overflow</a></td><td>Sriram</td></tr>
 <tr><td>2017-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/673063'>Remove default value for pseudoElement parameter</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/655197'>Correct the order of PaymentComplete enum members</a></td><td>Ravi Nanjundappa</td></tr>
 <tr><td>2017-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/674405'>fixup! Fix some range value defaults</a></td><td>DongJun Kim</td></tr>
