--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670206'>Move WTF::TriState to core/editing</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/685114'>IDL parser: IDL parser should use None for indentifier of unnamed operations</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/677911'>[RLS] Get MinimumScrollOffsetInt() from LVSA whereever applicable</a></td><td>Sriram</td></tr>
 <tr><td>2017-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/677903'>[RLS] Update Element::scrollWidth to handle RLS case</a></td><td>Sriram</td></tr>
