--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/668380'>ERR_NAME_NOT_RESOLVED refers to "DNS address" instead of "IP address".</a></td><td>nikhil</td></tr>
+<tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/680194'>[RLS] Add test to track layout pass count</a></td><td>Sriram</td></tr>
+<tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/684001'>clean up was_scrolled_by_user plumbing</a></td><td>Sriram</td></tr>
 <tr><td>2017-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/686679'>use USVString for URLs at Worklet.</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/670206'>Move WTF::TriState to core/editing</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/685114'>IDL parser: IDL parser should use None for indentifier of unnamed operations</a></td><td>Bhagirathi Satpathy</td></tr>
