--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/662886'>Upstream LayoutTests/html/dialog/dialog-autofocus* to WPT.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/668380'>ERR_NAME_NOT_RESOLVED refers to "DNS address" instead of "IP address".</a></td><td>nikhil</td></tr>
 <tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/680194'>[RLS] Add test to track layout pass count</a></td><td>Sriram</td></tr>
 <tr><td>2017-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/684001'>clean up was_scrolled_by_user plumbing</a></td><td>Sriram</td></tr>
