--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/691535'>Clean up in layer.cc</a></td><td>nikhil</td></tr>
 <tr><td>2017-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676695'>Apply automatic range checks to storage::FileSystemType</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/665338'>Remove testRunner references in wpt tests</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-09-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/683006'>Recheck for display:none in StyleAdjuster after calling AdjustStyleForHTMLElement</a></td><td>Balazs Kelemen</td></tr>
