--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/697351'>Remove unused header HTMLIFrameElement.h</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/673370'>Sync initKeyboardEvent with the spec</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/691535'>Clean up in layer.cc</a></td><td>nikhil</td></tr>
 <tr><td>2017-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676695'>Apply automatic range checks to storage::FileSystemType</a></td><td>Rob Buis</td></tr>
