--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/701405'>Add missing Samsung committers to AUTHORS</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657337'>Adding some more UPI IDs to the regex.</a></td><td>Preeti Nayak</td></tr>
 <tr><td>2017-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/697191'>[RLS] Use correct ScrollableArea in InspectorLayerTreeAgent</a></td><td>Suneel Kota</td></tr>
 <tr><td>2017-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/697351'>Remove unused header HTMLIFrameElement.h</a></td><td>Bhagirathi Satpathy</td></tr>
