--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/700178'>Add support for WebVTT VTTRegion id</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2017-10-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/702096'>Avoid unnecessary canonicalization in edit commands</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/700195'>Fix issue in updating fPriorFrame value when it retries to start incremental decode</a></td><td>nagarajan.n</td></tr>
 <tr><td>2017-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/672623'>addEventListener accepts craziness for the listener</a></td><td>Bhagirathi Satpathy</td></tr>
