--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/701941'>Convert return-with-object-element.html to use test harness</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676926'>Convert return-key-in-hidden-field.html to use test harness</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/704495'>Clean up storage of overflow data in AudioInputSyncWriter</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2017-10-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/704496'>InsertParagraph command crashes with illformed tree</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/700178'>Add support for WebVTT VTTRegion id</a></td><td>k2.nagaraju</td></tr>
 <tr><td>2017-10-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/702096'>Avoid unnecessary canonicalization in edit commands</a></td><td>tanvir.rizvi</td></tr>
