--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/707506'>Remove WebExceptionCode</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706739'>Rename opaque_data to opaque_bytes</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/701941'>Convert return-with-object-element.html to use test harness</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676926'>Convert return-key-in-hidden-field.html to use test harness</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/704495'>Clean up storage of overflow data in AudioInputSyncWriter</a></td><td>k2.nagaraju</td></tr>
