--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/709574'>Revise CompositeEditCommand::DeleteSelection</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706752'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/707506'>Remove WebExceptionCode</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706739'>Rename opaque_data to opaque_bytes</a></td><td>zhuoyu.qian</td></tr>
