--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676965'>Use EditingState for frame validation in TypingCommand</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/704618'>Modified anchor-ismap-crash layout test case with test-harness and more accurate</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712294'>Remove unused header HTMLAnchorElement.h</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-10-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/709574'>Revise CompositeEditCommand::DeleteSelection</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706752'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
