--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712194'>Convert LayoutTest Insert-list-and-stitch.html to use assert_selection.js</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712135'>Measuring ImageCapture.setOptions() usage.</a></td><td>nikhil</td></tr>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712974'>Remove unused parameter from SelectionController::UpdateSelectionForMouseDrag</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/715857'>Make RLS versions of NGTextFragmentPainterTest</a></td><td>Suneel Kota</td></tr>
 <tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/676965'>Use EditingState for frame validation in TypingCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/704618'>Modified anchor-ismap-crash layout test case with test-harness and more accurate</a></td><td>Bhagirathi Satpathy</td></tr>
