--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/699957'>Expose ARIA application for aria-activedescendant </a></td><td>deejay</td></tr>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657517'>Upstream svg/dom/SVGLength*.html to web-platform-tests</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/718299'>Fix wrong usage of Element.offsetRight in area-cursor.html</a></td><td>Sriram</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/716276'>Introduce PageTestBase for test common logic</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712194'>Convert LayoutTest Insert-list-and-stitch.html to use assert_selection.js</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/712135'>Measuring ImageCapture.setOptions() usage.</a></td><td>nikhil</td></tr>
