--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/718796'>Remove unused HTMLIFrameElement.h inclusion from LayoutEmbeddedObject.cpp</a></td><td>Bhagirathi Satpathy</td></tr>
+<tr><td>2017-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/706881'>Rename SkCanvasVideoRenderer to PaintCanvasVideoRenderer</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/699957'>Expose ARIA application for aria-activedescendant </a></td><td>deejay</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/657517'>Upstream svg/dom/SVGLength*.html to web-platform-tests</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/718299'>Fix wrong usage of Element.offsetRight in area-cursor.html</a></td><td>Sriram</td></tr>
