--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/720720'>Unify test classes in core/layout to use PageTestBase.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/695815'>Move remaining HTMLDocument IDL to Document</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/638110'>Reduce doing canonicalization in TypingCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/718796'>Remove unused HTMLIFrameElement.h inclusion from LayoutEmbeddedObject.cpp</a></td><td>Bhagirathi Satpathy</td></tr>
