--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/723239'>Reduce unused memory inclusion from Document</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/721860'>Thead setter should throw if not handed a thead parameter</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/677067'>Apply automatic range checks to PP_DeviceType_Dev</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/721481'>Optimized exception code as common for EventListener</a></td><td>Bhagirathi Satpathy</td></tr>
