--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/728319'>Remove kLatestVersion constant</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/720723'>Unify test classes in modules/media_controls to use PageTestBase.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/714836'>Rename UIDevToolsCSSAgent to CSSAgent.</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/723239'>Reduce unused memory inclusion from Document</a></td><td>Bhagirathi Satpathy</td></tr>
