--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/720175'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/722839'>Reduce canonicalization in CompositeEditCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/722403'>Upstream LayoutTests/html/dialog/* to WPT.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/723539'>Convert few editing/undo layouttests to use test harness</a></td><td>tanvir.rizvi</td></tr>
