--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/731516'>Apply automatic range checks to MenuItem enum</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-10-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/732808'>Password should be added using TestPasswordStore.</a></td><td>nikhil</td></tr>
 <tr><td>2017-10-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/720175'>Reorg core/editing directory</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/722839'>Reduce canonicalization in CompositeEditCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/722403'>Upstream LayoutTests/html/dialog/* to WPT.</a></td><td>Shanmuga Pandi M</td></tr>
