--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/733148'>Apply automatic range checks to Decoration enum</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/739403'>[MediaControls] Minor cleanup</a></td><td>Sriram</td></tr>
 <tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/737504'>Remove chrome:: namespace in media/cdm_host_file_path.h</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/738842'>Add enable_daydream flag to vr features.gni.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2017-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/691636'>bluetooth: Hide False characterstics properties in bluetooth-internals</a></td><td>Pramod B S</td></tr>
