--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/734926'>Replace kInvalidThroughput with INVALID_RTT_THROUGHPUT.</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/739401'>Remove chrome:: namespace in chrome/browser/internal_auth.h</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/733148'>Apply automatic range checks to Decoration enum</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/739403'>[MediaControls] Minor cleanup</a></td><td>Sriram</td></tr>
 <tr><td>2017-10-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/737504'>Remove chrome:: namespace in media/cdm_host_file_path.h</a></td><td>cm.sanchi</td></tr>
