Link to trend image.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,10 @@
       <a href="https://code.google.com/p/chromium/issues/list?can=2&q=label%3AType-Bug-Regression+Status%3DAvailable">
       available bugs that are regressions (use to work, now broken)</a>.
     </p>
+
+    <p>
+      <a href="samsung_chromium_contributions.png">Trend</a> of Samsung's contribution to Chromium.
+    </p>
+
   </body>
 </html>
