--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/727481'>Rename UIDevToolsDOMAgent to DOMAgent.</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/745743'>CSSKeywordValue.value should never be empty string.</a></td><td>nikhil</td></tr>
+<tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/739262'>[Media]Update &lt;video muted=""&gt; handling to match spec</a></td><td>Sriram</td></tr>
 <tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/740591'>Unify test classes to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/740687'>Rename enable_daydream to enable_gvr_services and fix enabling logic</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2017-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/737403'>[Cleanup] Remove the useless comment in LayoutTextFragment</a></td><td>zhuoyu.qian</td></tr>
