--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/746861'>[css-typed-om]StylePropertyMaps should be obtained via the Element</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/727481'>Rename UIDevToolsDOMAgent to DOMAgent.</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/745743'>CSSKeywordValue.value should never be empty string.</a></td><td>nikhil</td></tr>
 <tr><td>2017-10-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/739262'>[Media]Update &lt;video muted=""&gt; handling to match spec</a></td><td>Sriram</td></tr>
