--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753102'>Remove old position adjustment for non-snap-to-lines WebVTT cues</a></td><td>Sriram</td></tr>
+<tr><td>2017-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753041'>[RLS] Make compositing/sqashing tests RLS aware</a></td><td>Suneel Kota</td></tr>
 <tr><td>2017-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/752602'>Remove unused expected.txt file</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/743582'>Remove overloaded CompositeEditCommand::ApplyCommandToComposite</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/746563'>Remove chrome:: namespace in src/chrome/child/pdf_child_init.h</a></td><td>cm.sanchi</td></tr>
