--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750542'>CSSSkew constructor should reject non-angles.</a></td><td>nikhil</td></tr>
 <tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753561'>Unify test classes in core/css to use PageTestBase</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750748'>document.open() should not invoke public window.open()</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/726252'>Fix element instance property listing test for SVG</a></td><td>Rob Buis</td></tr>
