--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750484'>Replaced sk_bitmap().empty() with drawsNothing()</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/752901'>Remove chrome:: namespace src/chrome/browser/media/media_url_constants.h</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/735639'>Change default value of aria-valuemin on some roles</a></td><td>deejay</td></tr>
 <tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/754465'>Remove unnecessary ui_devtools:: prefix from files in ui_devtools/ .</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750542'>CSSSkew constructor should reject non-angles.</a></td><td>nikhil</td></tr>
