--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/716096'>Update DocumentOrShadowRoot.idl to match spec</a></td><td>Sriram</td></tr>
+<tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/756675'>UseCounter for {Range,Element}.{getBoundingClientRect,getClientRects}</a></td><td>Shanmuga Pandi M</td></tr>
+<tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/752961'>Remove chrome:: namespace chrome/browser/media/android/cdm/media_drm_license_manager.h</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/756477'>Modified document.open exception message more accurate when the document</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750484'>Replaced sk_bitmap().empty() with drawsNothing()</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/752901'>Remove chrome:: namespace src/chrome/browser/media/media_url_constants.h</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/735639'>Change default value of aria-valuemin on some roles</a></td><td>deejay</td></tr>
