--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/733843'>Apply automatic range checks to ppapi enums</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/752904'>Remove chrome:: namespace chrome/renderer/media/chrome_key_systems_provider.h</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/716096'>Update DocumentOrShadowRoot.idl to match spec</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/756675'>UseCounter for {Range,Element}.{getBoundingClientRect,getClientRects}</a></td><td>Shanmuga Pandi M</td></tr>
