--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/760438'>Simplify PointInFrameContentIfVisible() in TreeScope.cpp</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/760247'>Add myself to blink_track watchlist</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/754245'>Change ConnectionTypeObserver to NetworkChangeObserver</a></td><td>mallikarjun82</td></tr>
 <tr><td>2017-11-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/733843'>Apply automatic range checks to ppapi enums</a></td><td>Rob Buis</td></tr>
