--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753167'>Null dereference in AXMenuList::DidUpdateActiveOption</a></td><td>deejay</td></tr>
 <tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765553'>[css-typed-om] Replace Element.styleMap with Element.attributeStyleMap</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-11-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763149'>[css-typed-om] merge constructor using optional keyword</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2017-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/761268'>Add comment to IPC_ENUM_TRAITS call</a></td><td>Rob Buis</td></tr>
