--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/758481'>[Android] Restricting Smart Go Next only in Android</a></td><td>AJITH KUMAR V</td></tr>
+<tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765753'>[css-typed-om] Fix the normalize-ident.html LayoutTest failure</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763193'>Remove Deprecated OnResponseStarted.</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765868'>Remove test cases under media/track/opera/interfaces/TextTrack/</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765633'>Remove media/track/opera/track/track-element test cases</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753167'>Null dereference in AXMenuList::DidUpdateActiveOption</a></td><td>deejay</td></tr>
