--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768354'>Remove tests in media/track/opera/interfaces/TextTrackCue/</a></td><td>Sriram</td></tr>
+<tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768507'>Remove tests in media/track/opera/interfaces/HTMLElement/HTMLTrackElement/</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753201'>[media] Move test result message constants to test_data_util</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/758481'>[Android] Restricting Smart Go Next only in Android</a></td><td>AJITH KUMAR V</td></tr>
 <tr><td>2017-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765753'>[css-typed-om] Fix the normalize-ident.html LayoutTest failure</a></td><td>Hwanseung Lee</td></tr>
