--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768595'>Remove chrome:: namespace out of (fast_)unload_controller.h</a></td><td>zhuoyu.qian</td></tr>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763032'>Clipboard should respect user-select style attribute</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765751'>Use default value of is_directional_ in WebLocalFrameImpl</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/760178'>Make clip() output as comma-seperated.</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768354'>Remove tests in media/track/opera/interfaces/TextTrackCue/</a></td><td>Sriram</td></tr>
