--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/770913'>chrome: Move media test files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/770613'>Remove some of the tests in media/track/opera/interfaces/</a></td><td>Sriram</td></tr>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750526'>Fix for incorrect currenttime if media duration is infinity</a></td><td>josephlolak</td></tr>
+<tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/758698'>document.open() should not invoke public window.open()</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768595'>Remove chrome:: namespace out of (fast_)unload_controller.h</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763032'>Clipboard should respect user-select style attribute</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/765751'>Use default value of is_directional_ in WebLocalFrameImpl</a></td><td>tanvir.rizvi</td></tr>
