--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771388'>chrome: Move /chrome/browser/ui/tab_contents out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771490'>chrome: Move chrome/test/ out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771379'>chrome: Move chrome/browser/printing out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/721610'>HTMLOptionElement text setter should not throw</a></td><td>Rob Buis</td></tr>
 <tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/770913'>chrome: Move media test files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/770613'>Remove some of the tests in media/track/opera/interfaces/</a></td><td>Sriram</td></tr>
