--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/774353'>Remove some of the tests in media/track/opera/interfaces/VTTCue/</a></td><td>Sriram</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/766027'>Use FrameSelection for SetMark in Editor class</a></td><td>tanvir.rizvi</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768469'>chrome: Move Sad Tab out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/770926'>chrome: Move media output protection files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/758456'>Permissions: Remove CONTENT_SETTINGS_TYPE_PUSH_MESSAGING</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771388'>chrome: Move /chrome/browser/ui/tab_contents out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771490'>chrome: Move chrome/test/ out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771379'>chrome: Move chrome/browser/printing out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
