--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763152'>Introduce callback for OpenDevice() method</a></td><td>Chandan Padhi</td></tr>
+<tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768550'>[ClusterFuzz] crash in replaceSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753204'>Rename DeleteCache to DoomCache.</a></td><td>zhuoyu.qian</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/776733'>MediaStreamVideoCapturerSource need not inherit RenderFrameObserver</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/737310'>Rename ReadableStreamController to ReadableStreamDefaultControllerWrapper</a></td><td>zhuoyu.qian</td></tr>
