--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771091'>chrome: Move Pepper files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
+<tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/773763'>[WebVTT] Update dom construction logic for timestamp per spec</a></td><td>Sriram</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/763152'>Introduce callback for OpenDevice() method</a></td><td>Chandan Padhi</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/768550'>[ClusterFuzz] crash in replaceSelectionCommand</a></td><td>tanvir.rizvi</td></tr>
 <tr><td>2017-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/753204'>Rename DeleteCache to DoomCache.</a></td><td>zhuoyu.qian</td></tr>
