--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/776237'>Make headers td.headers accept null as string</a></td><td>Rob Buis</td></tr>
+<tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/766088'>chrome: Move ChromeBackupWatcher out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/773520'>Measure HTMLFrameSetElement's non-null anonymous name getter</a></td><td>Shanmuga Pandi M</td></tr>
 <tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/771091'>chrome: Move Pepper files out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/773763'>[WebVTT] Update dom construction logic for timestamp per spec</a></td><td>Sriram</td></tr>
