--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/766227'>[css-typed-om] CSSScale should take Numberishes</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/776737'>Custom bindings removal for DOM API Document.open</a></td><td>Bhagirathi Satpathy</td></tr>
 <tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/766207'>chrome: Move ChromeIsolatedWorldIDs out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
 <tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/750530'>Create scrollbar's if scroll size is greater than visible size.</a></td><td>MuVen</td></tr>
 <tr><td>2017-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/773522'>chrome: Move browser profile preferences out of chrome namespace.</a></td><td>cm.sanchi</td></tr>
